Hotfix for NEWRAIN-5278 - Fix overlapping controls.

--- a/app/styles/_temp.scss
+++ b/app/styles/_temp.scss
@@ -711,6 +711,9 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   margin-bottom: 0px !important;
 }
 
+.clearflex {
+  display: initial;
+}
 
 /*
 .popover{
